# Asteroids_Game

./: .gitignore  README.md  constants.py  main.py  pyproject.toml
Game_Objects/: asteroid.py  asteroidfield.py  circle_shape.py  player.py  rectangle_shape.py  score_panel.py  shot.py
utilities/: constants.py
