[tool.poetry]
name = "asteroids_game"
version = "0.1.0"
description = "Game"
authors = ["Your Name <anatolii.dubovskyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
